[package]
name = "rustor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.4", features = ["derive"] }
criterion = { version = "0.5.1", features = ["html_reports"] }
rayon = "1.7.0"

[[bench]]
name = "benchmark"
harness = false